samples/_failures_safe/1761402892_908b19_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b98f1d92.c: In function ‘main’:
./samples/SAFE/__tmp_b98f1d92.c:143:15: error: expected ‘;’ at end of input
  143 |         printf
      |               ^
      |               ;
./samples/SAFE/__tmp_b98f1d92.c:143:9: error: expected declaration or statement at end of input
  143 |         printf
      |         ^~~~~~
./samples/SAFE/__tmp_b98f1d92.c:143:9: error: expected declaration or statement at end of input
